* minor QA improvement: converted "new Boolean" to "Boolean.valueOf"